# DualContouringDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Utils.cpp  Utils.h  density.json  main.cpp  operations.cpp  operations.h  shapes.cpp  shapes.h
DCWrappers/: BaseDualContouring.cpp  BaseDualContouring.h  MethodType.h  RegularDualContouring.cpp  RegularDualContouring.h  SimpleDualContouring.cpp  SimpleDualContouring.h
Scenes/: Cone.json  Cuboid.json  Cylinder.json  Elipsoid.json  Sphere.json  non-manifold.json  scene1.json  scene2.json  scene3.json
VoxParser/: VoxParser.cpp  VoxParser.h
VoxParser/Data/: MainChunk.cpp  MainChunk.h  MaterialChunk.cpp  MaterialChunk.h  ModelChunk.cpp  ModelChunk.h  NodeTree.cpp  NodeTree.h  PaletteChunk.cpp  PaletteChunk.h  TransformationTree.cpp  TransformationTree.h
cmake/: HunterGate.cmake
graphics/: DCWindow.cpp  DCWindow.h  Renderer.cpp  Renderer.h  VertexObject.h
graphics/shaders/: simple.frag
misc/: Args.cpp  Args.h  Utils.cpp  Utils.h
shaders/: simple.vert
simpleCSG/: density.cpp  density.h  shapes.cpp  shapes.h
simpleCSG/JSON/: BaseCsgNode.cpp  BaseCsgNode.h  BaseCsgShape.h  ConeCsgShape.cpp  ConeCsgShape.h  CuboidCsgLeaf.cpp  CuboidCsgLeaf.h  CuboidCsgShape.cpp  CuboidCsgShape.h  CylinderCsgShape.cpp  CylinderCsgShape.h  ElipsoidCsgLeaf.cpp  ElipsoidCsgLeaf.h  ElipsoidCsgShape.cpp  ElipsoidCsgShape.h  JsonLoader.cpp  JsonLoader.h  OperationCsgNode.cpp  OperationCsgNode.h  SphereCsgLeaf.cpp  SphereCsgLeaf.h  SphereCsgShape.cpp  SphereCsgShape.h
